// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostHeaderUserInfoPopoverWrapper - Snapshots > matches snapshot for current user (no Follow button) 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      data-hover="true"
      data-testid="popover"
    >
      <div
        data-as-child="true"
        data-testid="popover-trigger"
      >
        <div
          class="flex min-w-0 gap-3"
          data-testid="container"
        >
          <div
            class="flex min-w-0 gap-3"
            data-testid="container"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
            >
              <span
                class="flex h-full w-full items-center justify-center rounded-full bg-muted"
              >
                SU
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
              data-testid="container"
            >
              <p
                class="inline-block truncate text-base leading-none font-bold text-foreground hover:underline hover:decoration-white"
                data-testid="typography"
              >
                Snapshot User
              </p>
              <div
                class="flex min-w-0 items-center gap-2"
                data-testid="container"
              >
                <p
                  class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
                  data-testid="typography"
                >
                  @
                  snapshot
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-[280px] p-4"
        data-side="top"
        data-side-offset="8"
        data-testid="popover-content"
      >
        <div
          class="flex flex-col gap-3"
          data-override-defaults="true"
          data-testid="container"
        >
          <div
            class="flex min-w-0 items-center gap-2"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              data-size="md"
              data-testid="avatar"
            >
              <img
                alt="Snapshot User"
                data-testid="avatar-image"
                src="https://example.com/avatar.png"
              />
              <div
                data-testid="avatar-fallback"
              >
                SN
              </div>
            </div>
            <div
              class="flex min-w-0 flex-1 flex-col items-start"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
                data-testid="typography"
              >
                Snapshot User
              </p>
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                snapshot
              </p>
            </div>
          </div>
          <div
            class="flex items-start gap-[10px]"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWERS
              </p>
            </div>
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWING
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="w-[280px] p-4"
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      class="flex flex-col gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        class="flex min-w-0 items-center gap-2"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-size="md"
          data-testid="avatar"
        >
          <img
            alt="Snapshot User"
            data-testid="avatar-image"
            src="https://example.com/avatar.png"
          />
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
        <div
          class="flex min-w-0 flex-1 flex-col items-start"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
            data-testid="typography"
          >
            Snapshot User
          </p>
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snapshot
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-[10px]"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWERS
          </p>
        </div>
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWING
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfoPopoverWrapper - Snapshots > matches snapshot when following 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      data-hover="true"
      data-testid="popover"
    >
      <div
        data-as-child="true"
        data-testid="popover-trigger"
      >
        <div
          class="flex min-w-0 gap-3"
          data-testid="container"
        >
          <div
            class="flex min-w-0 gap-3"
            data-testid="container"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
            >
              <span
                class="flex h-full w-full items-center justify-center rounded-full bg-muted"
              >
                OU
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
              data-testid="container"
            >
              <p
                class="inline-block truncate text-base leading-none font-bold text-foreground hover:underline hover:decoration-white"
                data-testid="typography"
              >
                Other User
              </p>
              <div
                class="flex min-w-0 items-center gap-2"
                data-testid="container"
              >
                <p
                  class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
                  data-testid="typography"
                >
                  @
                  otherUse
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-[280px] p-4"
        data-side="top"
        data-side-offset="8"
        data-testid="popover-content"
      >
        <div
          class="flex flex-col gap-3"
          data-override-defaults="true"
          data-testid="container"
        >
          <div
            class="flex min-w-0 items-center gap-2"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              data-size="md"
              data-testid="avatar"
            >
              <img
                alt="Other User"
                data-testid="avatar-image"
                src="https://example.com/avatar.png"
              />
              <div
                data-testid="avatar-fallback"
              >
                OT
              </div>
            </div>
            <div
              class="flex min-w-0 flex-1 flex-col items-start"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
                data-testid="typography"
              >
                Other User
              </p>
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                otherUse
              </p>
            </div>
          </div>
          <div
            class="flex items-start gap-[10px]"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWERS
              </p>
            </div>
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWING
              </p>
            </div>
          </div>
          <div
            class="flex justify-start"
            data-override-defaults="true"
            data-testid="container"
          >
            <button
              aria-label="Unfollow"
              class="group h-8 w-full justify-center gap-2 rounded-full px-3 py-2"
              data-size="sm"
              data-testid="button"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-4 group-hover:hidden"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <p
                class="text-xs leading-4 font-bold group-hover:hidden"
                data-testid="typography"
              >
                Following
              </p>
              <svg
                aria-hidden="true"
                class="lucide lucide-user-minus hidden size-4 group-hover:block"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="9"
                  cy="7"
                  r="4"
                />
                <line
                  x1="22"
                  x2="16"
                  y1="11"
                  y2="11"
                />
              </svg>
              <p
                class="hidden text-xs leading-4 font-bold group-hover:block"
                data-testid="typography"
              >
                Unfollow
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="w-[280px] p-4"
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      class="flex flex-col gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        class="flex min-w-0 items-center gap-2"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-size="md"
          data-testid="avatar"
        >
          <img
            alt="Other User"
            data-testid="avatar-image"
            src="https://example.com/avatar.png"
          />
          <div
            data-testid="avatar-fallback"
          >
            OT
          </div>
        </div>
        <div
          class="flex min-w-0 flex-1 flex-col items-start"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
            data-testid="typography"
          >
            Other User
          </p>
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            otherUse
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-[10px]"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWERS
          </p>
        </div>
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWING
          </p>
        </div>
      </div>
      <div
        class="flex justify-start"
        data-override-defaults="true"
        data-testid="container"
      >
        <button
          aria-label="Unfollow"
          class="group h-8 w-full justify-center gap-2 rounded-full px-3 py-2"
          data-size="sm"
          data-testid="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 group-hover:hidden"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <p
            class="text-xs leading-4 font-bold group-hover:hidden"
            data-testid="typography"
          >
            Following
          </p>
          <svg
            aria-hidden="true"
            class="lucide lucide-user-minus hidden size-4 group-hover:block"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <line
              x1="22"
              x2="16"
              y1="11"
              y2="11"
            />
          </svg>
          <p
            class="hidden text-xs leading-4 font-bold group-hover:block"
            data-testid="typography"
          >
            Unfollow
          </p>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfoPopoverWrapper - Snapshots > matches snapshot with all props 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      data-hover="true"
      data-testid="popover"
    >
      <div
        data-as-child="true"
        data-testid="popover-trigger"
      >
        <div
          class="flex min-w-0 gap-3"
          data-testid="container"
        >
          <div
            class="flex min-w-0 gap-3"
            data-testid="container"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
            >
              <span
                class="flex h-full w-full items-center justify-center rounded-full bg-muted"
              >
                SU
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
              data-testid="container"
            >
              <p
                class="inline-block truncate text-base leading-none font-bold text-foreground hover:underline hover:decoration-white"
                data-testid="typography"
              >
                Snapshot User
              </p>
              <div
                class="flex min-w-0 items-center gap-2"
                data-testid="container"
              >
                <p
                  class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
                  data-testid="typography"
                >
                  @
                  snapshot
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-[280px] p-4"
        data-side="top"
        data-side-offset="8"
        data-testid="popover-content"
      >
        <div
          class="flex flex-col gap-3"
          data-override-defaults="true"
          data-testid="container"
        >
          <div
            class="flex min-w-0 items-center gap-2"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              data-size="md"
              data-testid="avatar"
            >
              <img
                alt="Snapshot User"
                data-testid="avatar-image"
                src="https://example.com/avatar.png"
              />
              <div
                data-testid="avatar-fallback"
              >
                SN
              </div>
            </div>
            <div
              class="flex min-w-0 flex-1 flex-col items-start"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
                data-testid="typography"
              >
                Snapshot User
              </p>
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                snapshot
              </p>
            </div>
          </div>
          <div
            class="flex items-start gap-[10px]"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWERS
              </p>
            </div>
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWING
              </p>
            </div>
          </div>
          <div
            class="flex justify-start"
            data-override-defaults="true"
            data-testid="container"
          >
            <button
              aria-label="Follow"
              class="group h-8 w-full justify-center gap-2 rounded-full px-3 py-2"
              data-size="sm"
              data-testid="button"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user-round-plus size-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 21a8 8 0 0 1 13.292-6"
                />
                <circle
                  cx="10"
                  cy="8"
                  r="5"
                />
                <path
                  d="M19 16v6"
                />
                <path
                  d="M22 19h-6"
                />
              </svg>
              <p
                class="text-xs leading-4 font-bold"
                data-testid="typography"
              >
                Follow
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="w-[280px] p-4"
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      class="flex flex-col gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        class="flex min-w-0 items-center gap-2"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-size="md"
          data-testid="avatar"
        >
          <img
            alt="Snapshot User"
            data-testid="avatar-image"
            src="https://example.com/avatar.png"
          />
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
        <div
          class="flex min-w-0 flex-1 flex-col items-start"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
            data-testid="typography"
          >
            Snapshot User
          </p>
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snapshot
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-[10px]"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWERS
          </p>
        </div>
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWING
          </p>
        </div>
      </div>
      <div
        class="flex justify-start"
        data-override-defaults="true"
        data-testid="container"
      >
        <button
          aria-label="Follow"
          class="group h-8 w-full justify-center gap-2 rounded-full px-3 py-2"
          data-size="sm"
          data-testid="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user-round-plus size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 21a8 8 0 0 1 13.292-6"
            />
            <circle
              cx="10"
              cy="8"
              r="5"
            />
            <path
              d="M19 16v6"
            />
            <path
              d="M22 19h-6"
            />
          </svg>
          <p
            class="text-xs leading-4 font-bold"
            data-testid="typography"
          >
            Follow
          </p>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfoPopoverWrapper - Snapshots > matches snapshot with bio 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      data-hover="true"
      data-testid="popover"
    >
      <div
        data-as-child="true"
        data-testid="popover-trigger"
      >
        <div
          class="flex min-w-0 gap-3"
          data-testid="container"
        >
          <div
            class="flex min-w-0 gap-3"
            data-testid="container"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
            >
              <span
                class="flex h-full w-full items-center justify-center rounded-full bg-muted"
              >
                SU
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
              data-testid="container"
            >
              <p
                class="inline-block truncate text-base leading-none font-bold text-foreground hover:underline hover:decoration-white"
                data-testid="typography"
              >
                Snapshot User
              </p>
              <div
                class="flex min-w-0 items-center gap-2"
                data-testid="container"
              >
                <p
                  class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
                  data-testid="typography"
                >
                  @
                  snapshot
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-[280px] p-4"
        data-side="top"
        data-side-offset="8"
        data-testid="popover-content"
      >
        <div
          class="flex flex-col gap-3"
          data-override-defaults="true"
          data-testid="container"
        >
          <div
            class="flex min-w-0 items-center gap-2"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              data-size="md"
              data-testid="avatar"
            >
              <div
                data-testid="avatar-fallback"
              >
                SN
              </div>
            </div>
            <div
              class="flex min-w-0 flex-1 flex-col items-start"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
                data-testid="typography"
              >
                Snapshot User
              </p>
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                snapshot
              </p>
            </div>
          </div>
          <div
            class="flex items-center"
            data-override-defaults="true"
            data-testid="container"
          >
            <p
              class="text-base leading-6 font-medium whitespace-pre-wrap text-secondary-foreground"
              data-testid="typography"
            >
              This is a snapshot bio
            </p>
          </div>
          <div
            class="flex items-start gap-[10px]"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWERS
              </p>
            </div>
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWING
              </p>
            </div>
          </div>
          <div
            class="flex justify-start"
            data-override-defaults="true"
            data-testid="container"
          >
            <button
              aria-label="Follow"
              class="group h-8 w-full justify-center gap-2 rounded-full px-3 py-2"
              data-size="sm"
              data-testid="button"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user-round-plus size-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 21a8 8 0 0 1 13.292-6"
                />
                <circle
                  cx="10"
                  cy="8"
                  r="5"
                />
                <path
                  d="M19 16v6"
                />
                <path
                  d="M22 19h-6"
                />
              </svg>
              <p
                class="text-xs leading-4 font-bold"
                data-testid="typography"
              >
                Follow
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="w-[280px] p-4"
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      class="flex flex-col gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        class="flex min-w-0 items-center gap-2"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-size="md"
          data-testid="avatar"
        >
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
        <div
          class="flex min-w-0 flex-1 flex-col items-start"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
            data-testid="typography"
          >
            Snapshot User
          </p>
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snapshot
          </p>
        </div>
      </div>
      <div
        class="flex items-center"
        data-override-defaults="true"
        data-testid="container"
      >
        <p
          class="text-base leading-6 font-medium whitespace-pre-wrap text-secondary-foreground"
          data-testid="typography"
        >
          This is a snapshot bio
        </p>
      </div>
      <div
        class="flex items-start gap-[10px]"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWERS
          </p>
        </div>
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWING
          </p>
        </div>
      </div>
      <div
        class="flex justify-start"
        data-override-defaults="true"
        data-testid="container"
      >
        <button
          aria-label="Follow"
          class="group h-8 w-full justify-center gap-2 rounded-full px-3 py-2"
          data-size="sm"
          data-testid="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user-round-plus size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 21a8 8 0 0 1 13.292-6"
            />
            <circle
              cx="10"
              cy="8"
              r="5"
            />
            <path
              d="M19 16v6"
            />
            <path
              d="M22 19h-6"
            />
          </svg>
          <p
            class="text-xs leading-4 font-bold"
            data-testid="typography"
          >
            Follow
          </p>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfoPopoverWrapper - Snapshots > matches snapshot without avatarUrl 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      data-hover="true"
      data-testid="popover"
    >
      <div
        data-as-child="true"
        data-testid="popover-trigger"
      >
        <div
          class="flex min-w-0 gap-3"
          data-testid="container"
        >
          <div
            class="flex min-w-0 gap-3"
            data-testid="container"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
            >
              <span
                class="flex h-full w-full items-center justify-center rounded-full bg-muted"
              >
                SU
              </span>
            </span>
            <div
              class="min-w-0 flex-1"
              data-testid="container"
            >
              <p
                class="inline-block truncate text-base leading-none font-bold text-foreground hover:underline hover:decoration-white"
                data-testid="typography"
              >
                Snapshot User
              </p>
              <div
                class="flex min-w-0 items-center gap-2"
                data-testid="container"
              >
                <p
                  class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
                  data-testid="typography"
                >
                  @
                  snapshot
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-[280px] p-4"
        data-side="top"
        data-side-offset="8"
        data-testid="popover-content"
      >
        <div
          class="flex flex-col gap-3"
          data-override-defaults="true"
          data-testid="container"
        >
          <div
            class="flex min-w-0 items-center gap-2"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              data-size="md"
              data-testid="avatar"
            >
              <img
                alt="Snapshot User"
                data-testid="avatar-image"
                src="https://example.com/avatar.png"
              />
              <div
                data-testid="avatar-fallback"
              >
                SN
              </div>
            </div>
            <div
              class="flex min-w-0 flex-1 flex-col items-start"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
                data-testid="typography"
              >
                Snapshot User
              </p>
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                snapshot
              </p>
            </div>
          </div>
          <div
            class="flex items-start gap-[10px]"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWERS
              </p>
            </div>
            <div
              class="flex flex-1 flex-col items-start gap-2"
              data-override-defaults="true"
              data-testid="container"
            >
              <p
                class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
                data-testid="typography"
              >
                <span
                  class="text-white"
                >
                  0
                </span>
                 FOLLOWING
              </p>
            </div>
          </div>
          <div
            class="flex justify-start"
            data-override-defaults="true"
            data-testid="container"
          >
            <button
              aria-label="Follow"
              class="group h-8 w-full justify-center gap-2 rounded-full px-3 py-2"
              data-size="sm"
              data-testid="button"
              data-variant="secondary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user-round-plus size-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 21a8 8 0 0 1 13.292-6"
                />
                <circle
                  cx="10"
                  cy="8"
                  r="5"
                />
                <path
                  d="M19 16v6"
                />
                <path
                  d="M22 19h-6"
                />
              </svg>
              <p
                class="text-xs leading-4 font-bold"
                data-testid="typography"
              >
                Follow
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="w-[280px] p-4"
    data-side="top"
    data-side-offset="8"
    data-testid="popover-content"
  >
    <div
      class="flex flex-col gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <div
        class="flex min-w-0 items-center gap-2"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-size="md"
          data-testid="avatar"
        >
          <img
            alt="Snapshot User"
            data-testid="avatar-image"
            src="https://example.com/avatar.png"
          />
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
        <div
          class="flex min-w-0 flex-1 flex-col items-start"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="truncate text-sm leading-5 font-bold whitespace-nowrap text-foreground"
            data-testid="typography"
          >
            Snapshot User
          </p>
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snapshot
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-[10px]"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWERS
          </p>
        </div>
        <div
          class="flex flex-1 flex-col items-start gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[1.2px] whitespace-pre-wrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            <span
              class="text-white"
            >
              0
            </span>
             FOLLOWING
          </p>
        </div>
      </div>
      <div
        class="flex justify-start"
        data-override-defaults="true"
        data-testid="container"
      >
        <button
          aria-label="Follow"
          class="group h-8 w-full justify-center gap-2 rounded-full px-3 py-2"
          data-size="sm"
          data-testid="button"
          data-variant="secondary"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user-round-plus size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 21a8 8 0 0 1 13.292-6"
            />
            <circle
              cx="10"
              cy="8"
              r="5"
            />
            <path
              d="M19 16v6"
            />
            <path
              d="M22 19h-6"
            />
          </svg>
          <p
            class="text-xs leading-4 font-bold"
            data-testid="typography"
          >
            Follow
          </p>
        </button>
      </div>
    </div>
  </div>
</div>
`;
